--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,4 @@
-name: Android CI (无签名)
+name: Android CI
 
 on:
   push:
@@ -43,7 +43,6 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew assembleNormalRelease assembleCompatibleRelease -Pversion=${{ github.ref_name }}
 
-      # 直接定位未签名 APK
       - name: Locate APKs and Set Outputs
         id: locate_apks
         run: |
@@ -52,66 +51,172 @@ jobs:
           echo "normal_apk=$normal_apk" >> $GITHUB_OUTPUT
           echo "compatible_apk=$compatible_apk" >> $GITHUB_OUTPUT
 
-      # 上传到 Actions Artifacts（供调试）
+      - name: Copy APKs to staging for signing
+        run: |
+          mkdir -p app/build/outputs/apk/all
+          cp "${{ steps.locate_apks.outputs.normal_apk }}" app/build/outputs/apk/all/
+          cp "${{ steps.locate_apks.outputs.compatible_apk }}" app/build/outputs/apk/all/
+
+      - name: Sign APKs
+        id: sign_apks
+        uses: ilharp/sign-android-release@v2
+        with:
+          releaseDir: app/build/outputs/apk/all
+          signingKey: ${{ secrets.ANDROID_SIGNING_KEY }}
+          keyAlias: ${{ secrets.ANDROID_KEY_ALIAS }}
+          keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+          keyPassword: ${{ secrets.ANDROID_KEY_PASSWORD }}
+          buildToolsVersion: 36.0.0
+
+      - name: Extract Signed APK Paths
+        id: extract_apks
+        run: |
+          IFS=':' read -r -a files <<< "${{ steps.sign_apks.outputs.signedFiles }}"
+          for file in "${files[@]}"; do
+            if [[ "$file" == *Normal* ]]; then
+              echo "signed_normal=$file" >> $GITHUB_OUTPUT
+            elif [[ "$file" == *Compatible* ]]; then
+              echo "signed_compatible=$file" >> $GITHUB_OUTPUT
+            fi
+          done
+
       - name: Upload APK - Compatible
         uses: actions/upload-artifact@v4
         with:
-          name: apk-compatible-unsigned
-          path: ${{ steps.locate_apks.outputs.compatible_apk }}
+          name: apk-compatible
+          path: ${{ steps.extract_apks.outputs.signed_compatible }}
 
       - name: Upload APK - Normal
         uses: actions/upload-artifact@v4
         with:
-          name: apk-normal-unsigned
-          path: ${{ steps.locate_apks.outputs.normal_apk }}
+          name: apk-normal
+          path: ${{ steps.extract_apks.outputs.signed_normal }}
 
-      # 提取文件名、版本号
       - name: Extract file names
         id: extract_info
         run: |
-          normal_file=$(basename "${{ steps.locate_apks.outputs.normal_apk }}")
-          compatible_file=$(basename "${{ steps.locate_apks.outputs.compatible_apk }}")
-          version=$(echo "$normal_file" | sed -E 's/.*-(Normal|Compatible)-(.*)\.apk/\2/')
+          normal_file=$(basename "${{ steps.extract_apks.outputs.signed_normal }}")
+          compatible_file=$(basename "${{ steps.extract_apks.outputs.signed_compatible }}")
+          # 提取版本号（以"Normal-"或"Compatible-"之后的部分为起点，以"-signed"之前的内容为终点）
+          version=$(echo "$normal_file" | sed -E 's/.*-(Normal|Compatible)-(.*)-signed\.apk/\2/')
           echo "normal_file=$normal_file" >> $GITHUB_OUTPUT
           echo "compatible_file=$compatible_file" >> $GITHUB_OUTPUT
           echo "version=$version" >> $GITHUB_OUTPUT
 
-      # 生成 checksum（可选）
-      - name: Generate APK Checksum
+      - name: Generate APKS Checksum
         run: |
-          sha256sum ${{ steps.locate_apks.outputs.normal_apk }}     > CHECKSUMS-Sesame-Normal-${{ steps.extract_info.outputs.version }}-unsigned.apk.sha256
-          sha256sum ${{ steps.locate_apks.outputs.compatible_apk }} > CHECKSUMS-Sesame-Compatible-${{ steps.extract_info.outputs.version }}-unsigned.apk.sha256
+          sha256sum ${{ steps.extract_apks.outputs.signed_normal }} > CHECKSUMS-Sesame-Normal-${{ steps.extract_info.outputs.version }}.${{ env.SHORT_SHA }}-signed.apk.sha256
+          sha256sum ${{ steps.extract_apks.outputs.signed_compatible }} > CHECKSUMS-Sesame-Compatible-${{ steps.extract_info.outputs.version }}.${{ env.SHORT_SHA }}-signed.apk.sha256
 
-      # 示例：直接上传未签名 APK 到 Release
+      - name: Get Commit Details
+        id: commit_details
+        run: |
+          COMMIT_MESSAGE_BODY=$( \
+            if [[ "${{ github.event_name }}" == "push" ]]; then \
+              echo "🔨 $(git rev-list --count ${{ github.event.before }}..${{ github.event.after }}) new commits to ${{ github.repository }}:${{ github.ref_name }} ([compare view](https://github.com/${{ github.repository }}/compare/${{ github.event.before }}...${{ github.event.after }}))"; \
+              echo ""; \
+              git log --format="  %h ([view commit](https://github.com/${{ github.repository }}/commit/%H)): %s by %an" ${{ github.event.before }}..${{ github.event.after }}; \
+            elif [[ "${{ github.event_name }}" == "pull_request" ]]; then \
+              echo "📦 Pull Request #${{ github.event.number }} for ${{ github.repository }}: ${{ github.head_ref }} -> ${{ github.base_ref }} ([view PR](https://github.com/${{ github.repository }}/pull/${{ github.event.number }}))"; \
+              echo ""; \
+              echo "Commits:"; \
+              git log --format="  %h ([view commit](https://github.com/${{ github.repository }}/commit/%H)): %s by %an" ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}; \
+            elif [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then \
+              echo "⚙️ Manual workflow run on ${{ github.ref_name }} by ${{ github.actor }}"; \
+              echo ""; \
+              echo "Latest commit:"; \
+              git log -1 --format="  %h ([view commit](https://github.com/${{ github.repository }}/commit/%H)): %s by %an"; \
+            else \
+              echo "ℹ️ Commit information for ${{ github.event_name }} event on ${{ github.ref_name }} by ${{ github.actor }}:"; \
+              echo ""; \
+              git log -1 --format="  %h ([view commit](https://github.com/${{ github.repository }}/commit/%H)): %s by %an"; \
+            fi \
+          )
+          echo "COMMIT_MESSAGE_BODY<<EOF" >> $GITHUB_OUTPUT
+          echo "$COMMIT_MESSAGE_BODY" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Send Combined Message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TG_CHAT_ID }}
+          token: ${{ secrets.TG_BOT_TOKEN }}
+          message: |
+            📦 *New Version ${{ steps.extract_info.outputs.version }} Build!*
+
+            - Files: 
+              - Normal: `${{ steps.extract_info.outputs.normal_file }}`
+              - Compatible: `${{ steps.extract_info.outputs.compatible_file }}`
+            - Branch: `${{ github.ref_name }}`
+            - Triggered by: `${{ github.actor }}`
+
+            *下载说明:*
+              * Normal 为正常版本,适用于`Android 8.0`及以上的系统
+              * Compatible 为兼容版本,适用于`Android 7.0`及以下的系统,最低支持`Android 5.1`
+
+            ${{ steps.commit_details.outputs.COMMIT_MESSAGE_BODY }}
+          format: markdown
+
+      - name: Send Normal APK
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TG_CHAT_ID }}
+          token: ${{ secrets.TG_BOT_TOKEN }}
+          document: ${{ steps.extract_apks.outputs.signed_normal }}
+
+      - name: Send Compatible APK
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TG_CHAT_ID }}
+          token: ${{ secrets.TG_BOT_TOKEN }}
+          document: ${{ steps.extract_apks.outputs.signed_compatible }}
+
+      - name: Create Tag from Version
+        if: startsWith(github.ref, 'refs/heads/main') && github.event_name == 'push'
+        run: |
+          VERSION_TAG="v${{ steps.extract_info.outputs.version }}"
+          echo "Creating tag: $VERSION_TAG"
+          git tag "$VERSION_TAG"
+          git push origin "$VERSION_TAG"
       - name: Upload Assets to Source Release
-        if: github.event_name == 'release'
         uses: softprops/action-gh-release@v2
         with:
-          name: ${{ github.event.release.tag_name || steps.extract_info.outputs.version }}
+          name: ${{ github.event.release.tag_name || steps.extract_info.outputs.version }} # 发布的名称。默认为标签名称
           files: |
-            ${{ steps.locate_apks.outputs.normal_apk }}
-            ${{ steps.locate_apks.outputs.compatible_apk }}
-            CHECKSUMS-Sesame-*-unsigned.apk.sha256
-          tag_name: ${{ steps.extract_info.outputs.version }}
+            ${{ steps.extract_apks.outputs.signed_compatible }}
+            ${{ steps.extract_apks.outputs.signed_normal }}
+            CHECKSUMS-Sesame-Normal-${{ steps.extract_info.outputs.version }}.${{ env.SHORT_SHA }}-signed.apk.sha256
+            CHECKSUMS-Sesame-Compatible-${{ steps.extract_info.outputs.version }}.${{ env.SHORT_SHA }}-signed.apk.sha256
+          tag_name: ${{ steps.extract_info.outputs.version}}
           draft: false
+          append_body: true
           generate_release_notes: true
           body: |
-            ## ⚠️ 未签名 APK，仅供测试
-            如需安装，请手动签名或使用调试环境。
+            ## ✨What's Changed
 
-      # 示例：通过 Telegram 发送未签名 APK
-      - name: Send Normal APK (unsigned)
-        if: secrets.TG_BOT_TOKEN
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TG_CHAT_ID }}
-          token: ${{ secrets.TG_BOT_TOKEN }}
-          document: ${{ steps.locate_apks.outputs.normal_apk }}
+            ${{ steps.commit_details.outputs.COMMIT_MESSAGE_BODY }}
+            > ## 下载说明
+              * Normal 为正常版本,适用于`Android 8.0`及以上的系统
+              * Compatible 为兼容版本,适用于`Android 7.0`及以下的系统,最低支持`Android 5.1`
 
-      - name: Send Compatible APK (unsigned)
-        if: secrets.TG_BOT_TOKEN
-        uses: appleboy/telegram-action@master
+            > ~~墙内不再更新~~ 倒卖必死全家
+      - name: Sync Release to Target Repository
+        uses: softprops/action-gh-release@v2
         with:
-          to: ${{ secrets.TG_CHAT_ID }}
-          token: ${{ secrets.TG_BOT_TOKEN }}
-          document: ${{ steps.locate_apks.outputs.compatible_apk }}
+          repository: Xposed-Modules-Repo/fansirsqi.xposed.sesame # 目标仓库的拥有者和仓库名称
+          name: ${{ github.event.release.tag_name || steps.extract_info.outputs.version }} # 发布的名称。默认为标签名称
+          files: |
+            ${{ steps.sign_normal_apk.outputs.signedFile }}
+            ${{ steps.sign_compatible_apk.outputs.signedFile }}
+            CHECKSUMS-Sesame-Normal-${{ steps.extract_info.outputs.version }}.${{ env.SHORT_SHA }}-signed.apk.sha256
+            CHECKSUMS-Sesame-Compatible-${{ steps.extract_info.outputs.version }}.${{ env.SHORT_SHA }}-signed.apk.sha256
+          token: ${{ secrets.TARGET_REPO_PAT }}
+          tag_name: ${{ steps.extract_info.outputs.version }}
+          draft: false
+          prerelease: ${{ steps.pre_release.outputs.IS_PRERELEASE }}
+          append_body: false
+          make_latest: true
+          body: |
+            📦 本 Release 同步自源仓库 [Sesame-TK](https://github.com/${{ github.repository }})
+            ✨ **更新内容**:
+            ${{ github.event.release.body || '无更新说明' }}
